kafka/kafka-ui-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kafka-ui-gateway
  namespace: kafka
spec:
  selector:
    istio: knative-istio-gateway # Убедитесь, что селектор совпадает с вашим Istio Ingress Pod
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "kafka.kn.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-ui-virtualservice
  namespace: kafka
spec:
  hosts:
    - "kafka.kn.local"
  gateways:
    - kafka-ui-gateway
  http:
    - route:
      - destination:
          host: kafka-ui.kafka.svc.cluster.local
          port:
            number: 80
